@@ -2,8 +2,10 @@ AUX kmod-26-libressl.patch 4641 BLAKE2B 0d1e20249e001729abfaaedf9cc16a30b470f449
 AUX kmod-static-nodes-r1 497 BLAKE2B eced5e152e017fa01abad98083031c1439c854b73cfc6b186f0b18ad0f65b61385e2d51e4ba649026e9d04774d1aa6db4b9a6c487554a4eb6417fa575da5b924 SHA512 4020c75d20260d66e0158b8bc53eb8c340d4b2f60ff703467c968734cf96c2c511764f2c983062d77924858b3269e3d421f8440a8e3591eb372ac1f5aa8d4b8f
 AUX zstd-support.patch 4756 BLAKE2B cb835364cf11d018dc127e5f47f66a58fe24a2eab262417077bce1992dc3070b09e65ed2063ff70bc8e5a17c6eff8b49fd0547eda65d07da5321851e9403bd93 SHA512 da612207f16d44386f9b34d0027e2c30db9b03a02f87a6dfb2f44cb4c24bcef743e96ba21284aeffccdaedcd3e675c7a61567aca88871569bd9740d1ec7bca4b
 DIST kmod-26.tar.xz 552032 BLAKE2B 3e596d06b48599bf4919346475a036b058fb18a7b19d39953e24fa943b95fdbe34a29a5062f6b4fe3510e667ae873d3b9ae03b72350fa85ddbb40ca6a7730b34 SHA512 3ca276c6fc13c2dd2220ec528b8dc4ab4edee5d2b22e16b6f945c552e51f74342c01c33a53740e6af8c893d42bd4d6f629cd8fa6e15ef8bd8da30cb003ef0865
+DIST kmod-28.tar.xz 552448 BLAKE2B af41a0c5681fb94eb5264f46ed2ae666d171d4e2d0dc21419a3c2f4b12a783350a06b408fb02a7afb00fcea1cd994ee35864c1ec8b7a8cc58a8c9dcdeffaf1b3 SHA512 50646dc72675a5e17b01e327e3d41b972f18aaeac20c8b00983c4d099c6218f35c32c184a833a2d7f716755d6a86851c90913d2835874cef933bdc4a9722df9a
 EBUILD kmod-26-r1.ebuild 4927 BLAKE2B d4fa16e59cc0d68402e4c00e16e60ed8359e2d5bf881d3394afa5ba145794573c52a46d683ae3bea4f2648581f88de5b7106fcabc5143de116b85ef844efff01 SHA512 8bedb0a9e32b4a4face3b42fe4cf7388d0401a3107eb4c93e004196dd851b758f537a490e10819cc45c7381442418066562dd6d7ae0b7c46f90444dd12ab47d1
 EBUILD kmod-26-r6.ebuild 5004 BLAKE2B 7b426673d0135b1ae06427a26db2fe501369aa361c3347d33cd9af2b6a0d30457948b3271527f1d1d0fb55107fbea5d58ec89dd5d46f0246b59aa9b997e0367b SHA512 be7e4b0678d3e83b6229486c84facd6374a20162022d8a69cf1108f544fd701d05bf29156002b3d784f1b8135569635fdc1fee70238897d75715f16d7428df34
 EBUILD kmod-26-r7.ebuild 5059 BLAKE2B 2830ab5d0f565720989d8f5d2a7fecc8ca0bf9ed5adcf70049da79fdbd8de9bb5a2e4f0f287ee1c5096dc3c1c3f2df374b69322036f923d2e2728ac9ca7b0e39 SHA512 e5a3f97ab853da8e399492becea87c23beabfb3ad126eff893bd60cc7daf524bdcd43ddff154bcb5ba252b05de8a15d7413174333795904c81115acb52dd3dd7
-MISC ChangeLog 421 BLAKE2B bf1d5d8351ae42268577ead988deb69eb391bf89d49785b6d2309e92c1d6254d53cfb8c114898b10a59ebd3968d6c71a50a2c547bbc012747bb77ad7512b4ab6 SHA512 e85997a9ed12cec1cea707e40adf64a2a19b77ed50f000b732946dd3d73ac9b13de97eb19842cf0dc21a9e04a947cf6c77642a5073a30d72d3bfb936df3deb75
+EBUILD kmod-28.ebuild 5041 BLAKE2B dddf6674f2daba2de2ff1482b2d068fc60c168b0e01a8c0360e728fae2eacb842697b5137a0178496fcf484bf71fa38c86c4dcea7fbb4c16ecc136e48e756512 SHA512 054efdabf1ddcca5c19407f89c68ee821307b86ad9871a5bfcd12b1492bc3c8e14a4be0019a68ac75140a542e6c7212d3046cf0d127a716f9c086387a4a94010
+MISC ChangeLog 512 BLAKE2B b1b14e5ce48139d3d8241d4b3a21324ab79560d7bb9bdee4f0de90db6f4988b55338bb57307320a4b15dfa24d1cbd4501a2e35758b2f54688e10e78f68e687de SHA512 72ab47a6c59740e6492b2db25ffbf1b8ee162e90d71c6020c7a5062caff0e9cad9bee402279291ec71cd402479e7c4c129ecb6de5d9cd09bb3b828a84420629c
 MISC metadata.xml 540 BLAKE2B ec5ee262fe76215688d99e32778848e71de5825f488eea2219e076290e020aa86de6138ab8366d5e077d44797789a27c22fea1c64f9c6e2713cf315b4b891455 SHA512 c4f47a77dfa7bc4cbaa61744fc46c5547763b51b48521cd229ac89680325ecbf415bd9e1ce9c71982ea721d0d5c4cf3677a0f70e8dad65235f523840cd14de94
