@@ -1,3 +1,5 @@
+*kmod-28
+::gentoo		add python3_8&3_9 support, update copyright&keywords&dependencies&logic
 *kmod-26-r7
 ::poly-c		bump to eapi7, only change gtk-doc where required, only do openrc stuff for openrc
 *kmod-26-r6
